Z-Index Fix

--- a/main_style.scss
+++ b/main_style.scss
@@ -7,6 +7,10 @@ $headerCol: #555555;
 
 //@mixin 
 
+header, main, footer{
+    z-index: 4;
+}
+
 h1, h2, h3, h4, h5, h6{
     color: $headerCol;
 }
